kubernetes/infra/kubectl/kube-istio-internal.yaml

apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: internal
  namespace: istio-internal
  annotations:
    argocd.argoproj.io/sync-wave: "3"
spec:
  selector:
    istio: internal-gateway
  servers:
    - port:
        number: 8443
        name: https-vault
        protocol: HTTPS
      hosts:
        - vault.k8sdev.rjst.de
      tls:
        mode: SIMPLE
        credentialName: k8sdev-wildcard-tls

---

# vault: Service -> listener 8443, users see plain :443
apiVersion: v1
kind: Service
metadata:
  name: gw-vault
  namespace: istio-internal
  annotations:
    argocd.argoproj.io/sync-wave: "3"
spec:
  type: ClusterIP
  selector:
    app: internal-gateway
    istio: internal-gateway
  ports:
    - name: https
      port: 443
      targetPort: 8443

---

apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: vault
  namespace: istio-internal
  annotations:
    argocd.argoproj.io/sync-wave: "3"
    portal.rjst.de/name: Vault
    portal.rjst.de/group: Plattform
    portal.rjst.de/description: Secrets
    portal.rjst.de/icon: "🔐"
spec:
  hosts:
    - vault.k8sdev.rjst.de
  gateways:
    - internal
  http:
    - route:
        - destination:
            host: vault.vault.svc.cluster.local
            port:
              number: 8200
